- Added color variables - Removed default button styling - Removed default select and focus styling - Removed flex on form submit button to fix Firefox bug - Fixed some form overflow errors (margins, inputs) - Adjusted margins on form inputs

--- a/style.css
+++ b/style.css
@@ -5,10 +5,45 @@
 	color: #001220;
 	margin: 0px;
 	padding: 0px;
+
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
+
+/* KLEUR VARIABELEN */
+
+:root {
+	--prim-dark: #001220;
+	--prim-light: #FAFAFA;
+
+	--gradient-prim: #FDA677;
+	--gradient-sec: #BA6EC6;
+	--gradient-bg: linear-gradient(180deg,
+					var(--gradient-prim) 0%,
+					var(--gradient-sec) 100%);
+
+	--counter-prim: #F75279;
+	--counter-sec: #EF7C33 ;
+	--counter-gradient: linear-gradient( 90deg,
+						var(--counter-sec) 0%,
+						var(--counter-prim) 100%);
+
+	--blob-prim: #FBAE3C;
+	--blob-sec: #E1685E;
+	--blob-third: #3D3056;
+
+}
+
+/* REMOVE STANDARD STYLING*/
+button, input[type="submit"], input[type="reset"] {
+	border: none;
+	padding: 0;
+}
+
+input:focus, textarea:focus, select:focus{
+	outline: none;
+}
 
 /* landingpage */
 .landingpage {
@@ -526,7 +561,7 @@ body{
 }
 
 .footer__register {
-   margin: 0 16px 0 16px;
+   /*margin: 0 16px 0 16px;*/
    position: relative;
    z-index: 10;
 }
@@ -539,52 +574,60 @@ body{
 
 .footer__register__form__input {
    height: 48px;
-   width: 98%;
    border: 2px solid #FFFFFF;
    border-radius: 4px;
-   margin-bottom: 1rem;
+   margin-bottom: 2rem;
    background-color: rgba(0, 0, 0, 0);
    color: black;
-   padding-left: 16px;
-   padding-right: 16px;
    display: flex;
    line-height: 48px;
+}
 
+.footer__register__form__label{
+	font-size: 1.25rem;
+	margin-bottom: 1rem;
+
+}
+
+.checkbox__wrapper{
+	margin-bottom: 2rem;
 }
 
 ::placeholder {
 	/* Chrome, Firefox, Opera, Safari 10.1+ */
 	color: black;
 	opacity: 1;
-	font-size: 20px;
+	font-size: 1.25rem;
 }
 
 .footer__register__form__submit {
 	text-transform: uppercase;
+	text-align: center;
 	background: #3d3056;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	border-radius: 4px;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
+	border-radius: 5px;
+	/*display: flex;*/
+	/*flex-direction: row;*/
+	/*justify-content: center;*/
+	/*align-items: center;*/
 	padding: 15px 35px;
-	width: 113px;
+	width: 150px;
 	height: 51px;
+	font-size: 1.35rem;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 20px;
 	line-height: 21px;
 	color: white;
-	border: 0px solid white;
+	border: 0;
 	margin-bottom: 1rem;
 }
 
 .footer__register__info__title {
    font-weight: 200;
    /*font-size: 3.25rem;*/
-	font-size: calc(28px + (52 - 28) * ((100vw - 320px) / (1920 - 320)));
-   line-height: calc(32.8px + (61 - 28) * ((100vw - 320px) / (1920 - 320)));
+	font-size: calc(28px + (52 - 28) * ((100vw - 320px) / (2240 - 320)));
+   line-height: calc(32.8px + (61 - 28) * ((100vw - 320px) / (2240 - 320)));
    color: #FFFFFF;
    margin-bottom: 2rem;
 	margin-top: -10px;
@@ -1344,7 +1387,7 @@ body{
 	}
 
 	#footer__wrapper {
-		justify-content: flex-start;
+		justify-content: space-between;
 	}
 
 	.footer__title{
@@ -1362,9 +1405,10 @@ body{
 	.footer__register__form {
 		width: 50%;
 	} 
-	
+
+
 	.footer__register__form__input {
-      width:449px;
+      width:100%;
    }
 
 	
